<resources>
    <string name="app_name">ZootecBC</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_long">Iniciar sesion o crear cuenta</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_sign_up">Crear cuenta</string>
    <string name="action_sign_out">Cerrar sesion</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">la contraseña debe contener >5 caracteres</string>
    <string name="login_failed">"Inicio de sesion fallido"</string>
    <string name="new_capture">Nueva captura</string>
    <string name="load_capture">Subir captura</string>
    <string name="edit_capture">Editar capturas</string>
    <string name="subir">Subir</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="returning">Regresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>